# watch-duty-crawler

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  biome.json  cdk.json  fetch-result.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.githooks/: pre-commit
.github/: copilot-instructions.md
container/: .env.example  compose.dev.yml
docs/: 01.md  mcp-integration-analysis.md
lib/: predicates.ts  types.ts  vpc-stack.ts  watch-duty-crawler-stack.crawler.ts  watch-duty-crawler-stack.ts
scripts/: setup-git-hooks.sh  setup-pre-commit.sh
src/: domain.ts
src/infra/postgres/: insntance.ts  schema.ts
src/usecase/: index.ts  interfaces.ts
src/watch_duty_crawler/: __init__.py  ai_service.py  main.py  models.py  web_server.py
src/watch_duty_crawler/usecase/: __init__.py  subtitle_fetcher.py
test/: crawler.ts  watch-duty-crawler.test.ts
tests/: test_ai_extractor_impl.py  test_basic.py  test_mcp_integration.py  test_script_extractor_impl.py
