[project]
name = "watch-duty-crawler"
version = "0.1.0"
description = "A subtitle fetching system for anime episodes."
authors = [{name = "chao7150"}]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.1",
    "beautifulsoup4>=4.11.1",
    "playwright>=1.30.0",
    "mcp>=1.0.0"
]
optional-dependencies = { dev = ["pytest>=7.1.2", "pytest-asyncio>=0.21.0", "mypy>=1.0.0", "types-requests>=2.28.0", "types-beautifulsoup4>=4.11.0"] }

[project.scripts]
watch-duty-crawler = "watch_duty_crawler.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src/watch_duty_crawler"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.1.2",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.28.0",
    "types-beautifulsoup4>=4.11.0"
]

[tool.hatch.envs.default.scripts]
lint = "ruff check src/watch_duty_crawler"
typecheck = "mypy"
test = "pytest"
format = "ruff format src tests"
check-all = ["lint", "typecheck", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
# Python version
python_version = "3.10"

# Import discovery
mypy_path = "src"
packages = ["watch_duty_crawler"]
namespace_packages = true

# Platform configuration
platform = "linux"

# Disallow dynamic typing
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_expr = false  # Allow some flexibility
disallow_any_decorated = false
disallow_any_explicit = false
disallow_subclassing_any = true

# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Miscellaneous strictness flags
strict_equality = true
extra_checks = true

# Configuring error messages
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
color_output = true
error_summary = true

# Incremental mode
incremental = true
cache_dir = ".mypy_cache"

# Advanced options
warn_unused_configs = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "bs4.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pylint.main]
# Python version
py-version = "3.10"

# Source roots
init-hook = 'import sys; sys.path.append("src")'

[tool.pylint.messages_control]
# Disable some overly strict warnings
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "invalid-name"
]

[tool.pylint.format]
# Maximum number of characters on a single line
max-line-length = 100
